--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>org.apache.parquet</groupId>
   <artifactId>parquet</artifactId>
-  <version>1.9.1-SNAPSHOT</version>
+  <version>1.9.1-SNAPSHOT-TINDER</version>
   <packaging>pom</packaging>
 
   <name>Apache Parquet MR</name>
